# learnsite-ai02

./: .editorconfig  .env.example  .gitignore  README.md  learnsite.db  package-lock.json  package.json
apps/api/: pyproject.toml  sitecustomize.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: assistants.py  auth.py  classroom.py  curriculum.py  drives.py  groups.py  health.py  lesson_plans.py  peer_reviews.py  profiles.py  quizzes.py  resources.py  settings.py  staff.py  submissions.py  tasks.py  typing.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: demo_seed.py  init_db.py  session.py
apps/api/app/models/: __init__.py  entities.py
apps/api/app/schemas/: auth.py  common.py
apps/api/app/services/: assistant_settings.py  attendance.py  classroom_switches.py  drive_files.py  group_activity.py  group_operation_logs.py  mock_payloads.py  remote_request_headers.py  review_templates.py  staff_access.py  student_groups.py  submission_files.py  system_settings.py  task_assets.py
apps/api/learnsite_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/storage/submissions/6631/: 4.docx
apps/api/storage/task_assets/900001/data_submit_form/: index.html
apps/api/storage/task_assets/900001/data_submit_visualization/: index.html
apps/api/storage/task_assets/900002/data_submit_form/: index.html
apps/api/storage/task_assets/900002/data_submit_visualization/: index.html
apps/api/storage/task_assets/900003/data_submit_visualization/: index.html
apps/api/tests/: test_smoke.py
(+180 files in other folders)
