[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learnsite-api"
version = "0.1.0"
description = "FastAPI backend skeleton for LearnSite"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.12",
  "openpyxl>=3.1.5",
  "uvicorn[standard]>=0.34.0",
  "pydantic-settings>=2.8.1",
  "sqlalchemy>=2.0.39",
  "python-multipart>=0.0.20"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.5"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
